--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="css/lightbox.min.css" rel="stylesheet">
 </head>
 
+<body>
 	<header> <!--Botonera y cabecera -->
 		
 		<img src="images/logo.png" alt="">
@@ -117,7 +118,7 @@
 			<div class="items">
 				<h2> Carteleria </h2>
 				<a href="images/plotter.jpg" data-lightbox="carteleria" data-title="Carteleria">
-					<img src="images/plotter.jpg ">
+					<img src="images/plotter.jpg " class="grow">
 				</a>
 				<p> Toad-like smile Flourish and Blotts he knew I’d coscroll back Quidditch World Cup. Fat Lady baubles banana fritters fairy lights Petrificus Totalus. So thirsty, deluminator firs’ years follow scroll 12 inches of parchscrollnt. Head Boy start-of-term banquet Cleansweep Seven roaring lion hat.</p>
 			</div>
@@ -225,7 +226,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script src="js/lightbox-plus-jquery.min.js"></script>
 	
-<body>
+
 
 </body>
 </html>	
